use asset_path for static files

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
-<h2>Hello World</h2>
+<h2>Welwome to Criscar Blog</h2>
+<%= link_to "Click to go to articles", "/articles" %>
 <p>
   The time is now: <%= Time.now %>
 </p>
