--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -2,4 +2,7 @@
 
 <%= render 'form' %>
 
-<strong><%= link_to 'Back', articles_path %></strong>
+<strong>
+  <i class="fas fa-arrow-left"></i>
+  <%= link_to 'Back', articles_path %>
+</strong>
