--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -28,8 +28,8 @@
     <%= render 'comments/form' %>
 
     <strong>
-      <%= link_to 'Edit', edit_article_path(@article) %> | 
-      <%= link_to 'Back', articles_path %>
+      <i class="fas fa-arrow-left"></i><%= link_to 'Back', articles_path %> | 
+      <%= link_to 'Edit', edit_article_path(@article) %>
     <strong>
   </div>
 </section>
